kubernetes/applications/media/servarr/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: readarr
          image: ghcr.io/joryirving/readarr-develop:0.4.10 # renovate: docker=ghcr.io/joryirving/readarr-develop
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          ports:
            - name: http
              containerPort: 8787
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /app/data
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: media
          persistentVolumeClaim:
            claimName: servarr-media-nfs
        - name: tmp
          emptyDir: {}
