kubernetes/applications/media/servarr/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: readarr
  ports:
    - name: web
      port: 80
      targetPort: http
