kubernetes/applications/media/servarr/readarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Ebook Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: readarr.png
    gethomepage.dev/name: Readarr
spec:
  ingressClassName: cilium
  rules:
    - host: readarr.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: readarr
                port:
                  name: web
  tls:
    - hosts:
        - readarr.costanza.cloud
      secretName: readarr-tls
